# epoka

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  StopwatchView.qml  TimerView.qml  epoka.pro  main.cpp  main.qml  qml.qrc  typescript
android_files/: AndroidManifest.xml
qrc/: AlarmView.qml  ClockIcon.qml  Stopwatch.qml  StopwatchView.qml  WorldClocksView.qml  cities.qrc  cities.xml  clock.qrc  main.qml  qml.qrc
src/: customwindow.h  main.cpp  windowiconiser.cpp  windowiconiser.h
